# torch_hawk

./: .gitignore  README.md  build_helper.sh  pyproject.toml  setup.py  test.py  test_conv1d.py  test_recurrence.py
.github/workflows/: python-build.yml
native/: .bazelrc  BUILD  WORKSPACE  conv1d_cuda.cu  conv1d_cuda.hh  linear_recurrence_cuda.cu  linear_recurrence_cuda.hh  torch_hawk.cc
src/torch_hawk/: __init__.py
tests/: test_conv1d.py  test_recurrence.py
