[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_hawk"
dynamic = ["version"]
description = "A Pythonic interface for MEDS datasets"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python=">=3.9"
dependencies = [
  "torch >= 2",
]

[tool.setuptools_scm]